--- a/autom4te.cache/output.2
+++ b/autom4te.cache/output.2
@@ -14709,7 +14709,7 @@ subdirs="$subdirs biomcmc-lib"
 
 BIOMCMCLIB=biomcmc-lib
 
-ac_config_files="$ac_config_files Makefile src/Makefile WFA/Makefile"
+ac_config_files="$ac_config_files Makefile src/Makefile submodules/WFA/Makefile"
 
 cat >confcache <<\_ACEOF
 # This file is a shell script that caches the results of configure
@@ -15733,7 +15733,7 @@ do
     "libtool") CONFIG_COMMANDS="$CONFIG_COMMANDS libtool" ;;
     "Makefile") CONFIG_FILES="$CONFIG_FILES Makefile" ;;
     "src/Makefile") CONFIG_FILES="$CONFIG_FILES src/Makefile" ;;
-    "WFA/Makefile") CONFIG_FILES="$CONFIG_FILES WFA/Makefile" ;;
+    "submodules/WFA/Makefile") CONFIG_FILES="$CONFIG_FILES submodules/WFA/Makefile" ;;
 
   *) as_fn_error $? "invalid argument: \`$ac_config_target'" "$LINENO" 5;;
   esac
